# pandaflow

./: .buildinfo  .coveragerc  .editorconfig  .gitignore  LICENCE  Makefile  README.md  contributing.html  genindex.html  index.html  objects.inv  overview.html  pyproject.toml  search.html  searchindex.js  tmp.txt  usage.html
.doctrees/: contributing.doctree  environment.pickle  index.doctree  overview.doctree  usage.doctree
.doctrees/strategies/: calculate_amount.doctree  calculate_ratio.doctree  calculateamount.doctree  cast_columns.doctree  constant.doctree  copy.doctree  debug.doctree  drop.doctree  drop_columns.doctree  drop_duplicates.doctree  filter.doctree  find_duplicates.doctree  hash.doctree  index.doctree  lookup_external.doctree  merge.doctree  merge_formula.doctree  regex.doctree  reorder_columns.doctree  replace.doctree  sort_by_column.doctree  split_column.doctree  uuid.doctree
.github/workflows/: ci.yml  docs.yml
_sources/: index.rst.txt  overview.rst.txt
_sources/strategies/: calculate_ratio.rst.txt  calculateamount.rst.txt  cast_columns.rst.txt  constant.rst.txt  copy.rst.txt  drop_columns.rst.txt  drop_duplicates.rst.txt  filter.rst.txt  find_duplicates.rst.txt  index.rst.txt  lookup_external.rst.txt  regex.rst.txt  reorder_columns.rst.txt  replace.rst.txt  split_column.rst.txt  uuid.rst.txt
doc/examples/: example_strategy_merge_formula.json
docs/: generate_strategy_docs.py  validate_docs.py
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js  strategies.html
docs/examples/: example_data.csv  example_strategy_hash.json  example_strategy_merge_formula.json  generate_random_csv.py
docs/source/: conf.py  contributing.rst  index.rst  overview.rst  pandaflow-schema.json  usage.rst
docs/source/_templates/: strategy.rst.j2
docs/source/data/: calculate_ratio_input.csv  calculate_ratio_output.csv  calculateamount_input.csv  (+12 more)
pandaflow/: __init__.py  utils.py
pandaflow/cli/: archive.py  check.py  dag.py  duplicates.py  list_strategies.py  main.py  run.py  schema.py  strategies.py  watch.py
pandaflow/core/: archiver.py  config.py  extract.py  factory.py  generate_schemas.py  load.py  log.py  reader.py  registry.py  runner.py  transformer.py  watcher.py  writer.py
pandaflow/models/: config.py
pandaflow/strategies/: base.py  calculate_amount.py  calculate_ratio.py  calculateamount.py  calculateunitcost.py  cast_columns.py  constant.py  copy.py  csvfile.py  debug.py  deduplicate.py  drop.py  drop_columns.py  drop_duplicates.py  filter.py  find_duplicates.py  hash.py  lookup_external.py  merge.py  merge_sources.py  mergestring.py  regex.py  reorder_columns.py  replace.py  sort_by_column.py  split_column.py  uuid.py
pandaflow/tests/: test_utils.py
strategies/: calculate_amount.html  calculate_ratio.html  calculateamount.html  cast_columns.html  constant.html  copy.html  debug.html  drop.html  drop_columns.html  drop_duplicates.html  filter.html  find_duplicates.html  hash.html  index.html  lookup_external.html  merge.html  merge_formula.html  regex.html  reorder_columns.html  replace.html  sort_by_column.html  split_column.html  uuid.html
(+119 files in other folders)
